# tap-callrail

./: README.md  meltano.yml  pyproject.toml  tap-callrail.sh  tox.ini
tap_callrail/: client.py  streams.py  tap.py
tap_callrail/schemas/: calls.json
tap_callrail/tests/: __init__.py  test_core.py
