[tool.poetry]
name = "tap-callrail"
version = "0.0.1"
description = "`tap-callrail` is a Singer tap for callrail, built with the Meltano SDK for Singer Taps."
authors = ["Michael Cannucci"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-callrail = 'tap_callrail.tap:Tapcallrail.cli'
